plugins {
	id "com.crystaelix.loom" version "1.13-SNAPSHOT"
	id "eclipse"
	id "idea"
	id "maven-publish"
	id "com.crystaelix.blossom" version "1.3.2"
	id "me.modmuss50.mod-publish-plugin" version "2.1.1"
}

repositories {
	mavenCentral()
	flatDir {
		dirs "libs"
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.parchmentmc.net/"
			}
		}
		filter {
			includeGroup "org.parchmentmc.data"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.blamejared.com/"
			}
		}
		filter {
			includeGroup "mezz.jei"
			includeGroup "foundry.veil"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.ithundxr.dev/snapshots/"
			}
		}
		filter {
			includeGroup "com.tterrag.registrate"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.createmod.net/"
			}
		}
		filter {
			includeGroup "dev.engine-room.flywheel"
			includeGroup "net.createmod.ponder"
			includeGroup "com.simibubi.create"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.ryanhcode.dev/releases/"
			}
		}
		filter {
			includeGroup "dev.ryanhcode.sable-companion"
			includeGroup "dev.ryanhcode.sable"
			includeGroup "dev.simulated_team.simulated"
			includeGroup "dev.eriksonn.aeronautics"
			includeGroup "dev.ryanhcode.offroad"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.squiddev.cc/"
			}
		}
		filter {
			includeGroup "cc.tweaked"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://thedarkcolour.github.io/KotlinForForge/"
			}
		}
		filter {
			includeGroup "thedarkcolour"
		}
	}
	exclusiveContent {
		forRepository {
			ivy {
				// Hacky ivy pattern to get railx into development environment
				artifactPattern "https://github.com/lhwdev/[module]/releases/download/([classifier]-)[revision]/[module]-[revision].jar"
				metadataSources {
					artifact()
				}
			}
		}
		filter {
			includeGroup "com.lhwdev.minecraft"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.realrobotix.me/master/"
			}
		}
		filter {
			includeGroup "com.copycatsplus"
			includeGroup "com.rbasamoyai"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.firstdarkdev.xyz/snapshots/"
			}
		}
		filter {
			includeGroup "com.lowdragmc.ldlib2"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://cursemaven.com/"
			}
		}
		filter {
			includeGroup "curse.maven"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://api.modrinth.com/maven/"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}
}

def mcVersion = "1.21.1"
def modName = "simurail"
def modId = "simurail"
def specVersion = "0"
def vendor = "thelm"
group = "com.crystaelix.simurail"
def baseVersion = "0.0.0-a"

version = hasProperty("commitHash") ? "${baseVersion}+${commitHash}" : baseVersion

def archivesName = "${modName}-${mcVersion}"
base.archivesName = archivesName

sourceSets {
	main
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
		vendor = JvmVendorSpec.AZUL
	}
	withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}

loom {
	silentMojangMappingsLicense()
	runs {
		configureEach {
			property "forge.logging.console.level", "debug"
		}
		client
		server
	}
}

dependencies {
	// Minecraft
	minecraft "com.mojang:minecraft:1.21.1"
	mappings loom.layered {
		officialMojangMappings()
		parchment "org.parchmentmc.data:parchment-1.21.1:2024.11.17@zip"
	}
	neoForge "net.neoforged:neoforge:21.1.234"

	// Dependencies
	implementation("mezz.jei:jei-1.21.1-neoforge:19.27.0.346") {transitive = false}
	implementation "com.tterrag.registrate:Registrate:MC1.21-1.3.0+67"
	implementation "dev.engine-room.flywheel:flywheel-neoforge-1.21.1:1.0.6-41"
	implementation "net.createmod.ponder:ponder-neoforge:1.0.82+mc1.21.1"
	implementation("com.simibubi.create:create-1.21.1:6.0.10-280:slim") {transitive = false}
	implementation("foundry.veil:veil-neoforge-1.21.1:4.1.4") {transitive = false}
	implementation "dev.ryanhcode.sable-companion:sable-companion-common-1.21.1:1.6.0"
	implementation("dev.ryanhcode.sable:sable-neoforge-1.21.1:2.0.3") {transitive = false}
	implementation("dev.simulated_team.simulated:simulated-neoforge-1.21.1:1.3.0") {transitive = false}
	implementation "curse.maven:steam-n-rails-neoforge-1414670:8261376"
	implementation "curse.maven:create-blocks-bogies-1317252:7471348"
	implementation "curse.maven:create-coasters-simulated-1601871:8583907"
	implementation "cc.tweaked:cc-tweaked-1.21.1-forge:1.120.0"
	implementation "curse.maven:create-electro-energetics-1443327:8345582"
	implementation("com.lowdragmc.ldlib2:ldlib2-neoforge-1.21.1:2.2.27:all") {transitive = false}
	implementation "curse.maven:sable-schematic-tool-1526951:8247085"
	implementation "curse.maven:synaxis-1526348:8412557"

	// Testing
	runtimeOnly("dev.eriksonn.aeronautics:aeronautics-neoforge-1.21.1:1.3.0") {transitive = false}
	runtimeOnly("dev.ryanhcode.offroad:offroad-neoforge-1.21.1:1.3.0") {transitive = false}
	runtimeOnly "thedarkcolour:kotlinforforge-neoforge:5.12.0"
	runtimeOnly "com.lhwdev.minecraft:railx:0.2.0-build.12:mc1.21.1"
	runtimeOnly("com.copycatsplus:copycats:3.0.4+mc.1.21.1-neoforge") {transitive = false}
	runtimeOnly "com.rbasamoyai:ritchiesprojectilelib:2.1.2+mc.1.21.1-neoforge"
	runtimeOnly("com.rbasamoyai:createbigcannons:5.11.7+mc.1.21.1") {transitive = false}
	runtimeOnly "curse.maven:create-aeronautics-transmission-linkage-1548056:8264158"
	runtimeOnly "curse.maven:drive-by-wire-with-sable-1520378:8247104"
	runtimeOnly "curse.maven:create-deco-509285:7943181"
	runtimeOnly "curse.maven:create-aeronauticstoolgun-1521349:8243840"

	// Performance
	runtimeOnly "curse.maven:yeetusexperimentus-635427:5444189"
	runtimeOnly "curse.maven:modernfix-790626:8360807"
	runtimeOnly "curse.maven:ferritecore-429235:7524151"
}

def replacements = [
	"0@VERSION@": version
]

blossom {
	replaceToken(replacements)
}

processResources {
	inputs.properties(replacements)
	filesMatching(["mcmod.info", "META-INF/mods.toml", "META-INF/neoforge.mods.toml", "fabric.mod.json"]) {
		filter {
			it.replace(replacements)
		}
	}
}

def manifestAttributes = [
	"Specification-Title": modName,
	"Specification-Vendor": vendor,
	"Specification-Version": specVersion,
	"Implementation-Title": archivesName,
	"Implementation-Version": version,
	"Implementation-Vendor": vendor
]

jar {
	manifest.attributes(manifestAttributes)
}

sourcesJar {
	manifest.attributes(manifestAttributes)
}

publishing {
	publications {
		register("mavenJava", MavenPublication) {
			artifactId = archivesName
			artifact remapJar
			artifact sourcesJar
		}
	}
	repositories {
		if(project.hasProperty("CrystaelixMavenUsername") && project.hasProperty("CrystaelixMavenPassword")) {
			maven {
				name = "CrystaelixMaven"
				url = "https://maven.crystaelix.com/releases/"
				credentials(PasswordCredentials)
			}
		}
	}
}

publishMods {
	file = remapJar.archiveFile
	version = displayName = project.version
	changelog = file("changelog.md").text
	type = STABLE
	modLoaders.add("neoforge")
	additionalFiles.from(sourcesJar.archiveFile)

	curseforge {
		accessToken = providers.gradleProperty("curseforge.token")
		projectId = ""
		minecraftVersions.add(mcVersion)
		client = true
		server = true
		requires "create-aeronautics"
	}

	modrinth {
		accessToken = providers.gradleProperty("modrinth.token")
		projectId = ""
		minecraftVersions.add(mcVersion)
		requires "create-aeronautics"
	}
}
